Fix header alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,7 +121,7 @@ body {
 }
 
 .campaign-state-header {
-  text-align: right;
+  /*text-align: right;*/
 }
 
 /*
